# xtorch-examples

./: .gitignore  1.py  CMakeLists.txt  main.cpp
WILL_BE_REMOVED_SOON/: main.cpp
WILL_BE_REMOVED_SOON/datasets/: cifar100.cpp  fashion.cpp
WILL_BE_REMOVED_SOON/models/: alexnet.cpp
WILL_BE_REMOVED_SOON/test/: main.cpp
computer_vision/: CMakeLists.txt
computer_vision/image_classification/: CMakeLists.txt  classifying_handwritten_digits_with_lenet_on_mnist.cpp
computer_vision/image_generation/: CMakeLists.txt  generating_images_with_dcgan.cpp  style_transfer_with_cycle_gan.cpp
computer_vision/object_detection/: detecting_objects_with_faster_rcnn.cpp  training_yolo_v3_on_coco_dataset.cpp
computer_vision/segmentation/: instance_segmentation_with_mask_rcnn.cpp  semantic_segmentation_with_deeplab_v3.cpp
computer_vision/semantic_segmentation/: semantic_segmentation_with_deeplab_v3.cpp
datasets/: cifar10.cpp
deployment_and_production/model_serialization/: exporting_models_to_torch_script.cpp  saving_and_loading_models_in_xtorch.cpp
generative_models/autoencoders/: denoising_autoencoders_for_image_restoration.cpp  variational_autoencoders_for_latent_space_exploration.cpp
generative_models/diffusion_models/: image_generation_with_ddpm.cpp
generative_models/generative_adversarial_networks/: generating_mnist_digits_with_gans.cpp  high_resolution_image_generation_with_progressive_gans.cpp
getting_started/: building_and_training_a_simple_neural_network.cpp  introduction_to_xtorch__tensors_and_autograd.cpp  using_the_xtorch_trainer_for_easy_training.cpp
graph_neural_networks/graph_level_tasks/: graph_classification_with_diff_pool.cpp  molecular_property_prediction_with_message_passing_neural_networks.cpp
graph_neural_networks/node_Level_tasks/: node_classification_with_graph_convolutional_Networks_(gcn).cpp  node_embedding_with_graph_sage.cpp
introduction/: CMakeLists.txt  hello-world.cpp  py_exec_test.cpp  py_exec_test_2.cpp  py_exec_test_3.cpp  py_test.cpp  res_mnist.cpp  res_mnist_2.cpp
models/: lenet5.cpp  resnet.cpp  vggnet16.cpp
natural_language_processing/language_modeling/: fine_tuning_bert_for_downstream_tasks.cpp  python_trace_bert.py  training_a_gpt_like_model.cpp  training_a_gpt_like_model_v2.cpp
natural_language_processing/sequence_to_sequence/: machine_translation_with_encoder_decoder_models.cpp  summarization_with_pointer_generator_networks.cpp
natural_language_processing/text_classification/: python_trace_transformer.py  sentiment_analysis_with_rnns.cpp  text_classification_with_transformers.cpp
performance_and_benchmarking/speed_optimization/: profiling_and_optimizing_training_loops.cpp
temp/: CMakeLists.txt  celeb_test.cpp  gdown_test.cpp  hello-world.cpp  py_exec_test.cpp  res_mnist.cpp
test/: CMakeLists.txt  main.cpp
time_series_and_sequential_data/anomaly_detection/: using_isolation_forests_for_time_series_anomalies.cpp
